tweaked 'dice' command